--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,5 +22,8 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+
     - name: Run tests
       run: ./gradlew test
+    - name: Run Detekt
+      run: ./gradlew app:detekt
