--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    # Setup
     - uses: actions/checkout@v3
     - name: set up JDK 17
       uses: actions/setup-java@v3
@@ -23,7 +24,22 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
+    # Linting
+    - name: Run Detekt
+      run: ./gradlew detekt
+    - name: Run Android lint
+      run: ./gradlew lint
+    - name: Upload Detekt results
+      uses: github/codeql-action/upload-sarif@v2
+      with:
+        sarif_file: app/build/reports/detekt/detekt.sarif
+        category: detekt
+    - name: Upload Android Lint results
+      uses: github/codeql-action/upload-sarif@v2
+      with:
+        sarif_file: app/build/reports/lint-results-debug.sarif
+        category: android-lint
+
+    # Tests
     - name: Run tests
       run: ./gradlew test
-    - name: Run Detekt
-      run: ./gradlew app:detekt
