--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -48,7 +48,7 @@ output-reports:
   # - 'XmlOutputReport'
   # - 'HtmlOutputReport'
   - 'MdOutputReport'
-  - 'SarifOutputReport'
+  # - 'SarifOutputReport'
 
 naming:
   active: true
